[horizontal]
WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plugin-livebox/commits/master[Historique Commit]

Liste des évolutions majeures de la version courante :

- Correction lors de la sauvegarde de la livebox

Anciennes évolutions :

- Modification pour compatibilité Jeedom V3
- Plus de suivi de version
- Ajout de la commande reboot
- Ajout du delai de changement d'état de la synchro ADSL en seconde
- Mise a jour des indicateurs, même si la valeur ne change pas pour les graphiques.
- Ajout de bouton "WPS Push Button"
- Liste des équipements
- Correction de variable cachees pour Cookies.
- Modification de cron pour plus d'autonomie.
- Ajout des informations de marge montante et descendante.
- Support de plusieurs livebox.
- Correction par rapport au nouveau core.
- Correction bug de collecte
- Correction pour désinstallation sans livebox
- Ajout de lien vers les options d'affichage
- Ajout d'un Etat de livebox
- Correction pour la téléphonie en H.323
- Optimisation pour ne pas mettre à jour les données si elle le sont déjà.
- Suppression de commande reset
- Première version bêta